# Large-scale-Functional-Annotation-of-Prokaryotic-Genes-using-Protein-Language-Models---TFG

./: README.md  extract_metadata.py  prostt5_embedder.py  prostt5_embedder_np.py  pyproject.toml  t5_embedder.py  umap_embedder.py
KOPNet_prediction/: predict_ko.py  readme.md  sample_UMAP_reduction.py
KOPNet_training/: dataloader_w.py  dataloader_w_np.py  efficient_umap.py  efficient_umap_np.py  kos_nn_w.py  kos_nn_w_np.py  new_fix_ko.py  prepare_labels.py
jordi/: dataloaders.py  find_valid_ids.py  kopnet.py  readme.md  t5_embedder.py  umap_embedder.py
originals/: new_fix_ko-original.py  prostt5_embedder-original.py
